# alibi-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-backend.yml  quality.yml
backend/app/: __init__.py  schemas.py
backend/app/agents/: __init__.py  generator.py  judge.py  judge_scoring.py  risk_analyzer.py
backend/app/api/: deps.py  main.py  routes.py
backend/app/rag/: __init__.py  retriever.py
backend/app/services/: __init__.py  evidence.py  orchestrator.py
backend/app/utils/: __init__.py  hf_image.py  logging.py  openai_client.py  settings.py
backend/data/: knowledge_cards.json
backend/tests/: conftest.py  test_api_generate.py  test_evidence_image_prompt.py  test_health.py  test_judge_scoring.py  test_rag_retriever.py
frontend/: streamlit_app.py
scripts/: gh_api_initial_commit.py  test_hf_inference_image.py
